# category-pie-chart

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/charts/: db.sqlite3
backend/charts/api/: admin.py
backend/charts/api/management/commands/: seed.py
backend/charts/api/migrations/: 0001_initial.py  0002_alter_purchase_timestamp.py
backend/charts/api/models/: purchase_model.py
backend/charts/api/serializers/: category_count.py  category_count_serializer.py  date_range.py  date_range_serializer.py  purchase_serializer.py
backend/charts/api/services/: chart_service.py
backend/charts/api/tests/services/: test_chart_service.py
backend/charts/api/tests/utils/: test_date.py  test_date_utils.py
backend/charts/api/tests/views/: test_pie_chart_view.py
backend/charts/api/types/: api_types.py
backend/charts/api/urls/: pie_chart_urls.py
backend/charts/api/utils/: date.py  date_utils.py
backend/charts/api/views/: pie_chart.py  pie_chart_view.py
backend/charts/charts/: asgi.py  settings.py  urls.py  wsgi.py
client/: package.json  tsconfig.node.json
frontend/: .gitignore  (+10 more)
server/: pyproject.toml
server/charts/: db.sqlite3
server/charts/api/: admin.py
server/charts/api/models/: purchase.py
server/charts/api/serializers/: purchase.py
server/charts/api/tests/views/: test_pie_chart.py
server/charts/api/urls/: pie_chart.py
server/charts/api/utils/: date.py
server/charts/api/utils/constants/: commands.py
server/charts/api/views/: pie_chart.py
server/charts/charts/: settings.py  urls.py
(+87 files in other folders)
