[tool.poetry]
name = "charts_api"
version = "0.1.0"
description = "An API server for the Category Pie Charts Demo App"
authors = ["Edgar Pabon <edgar.pabon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.8"
django-cors-headers = "^4.9.0"
djangorestframework = "^3.16.1"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
